--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Track Me Not",
-  "version": "0.3",
+  "version": "0.3-a",
 
   "description": "See who's tracking your emails and block them from doing so.",
   "icons": {"128": "assets/logo-128x128.png"},
